package com.github.notyy.typeflow.editor

trait Platform

case object Local extends Platform
case object Aliyun extends Platform
